--- a/.github/workflows/build-on-release.yaml
+++ b/.github/workflows/build-on-release.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
 
-  config:
+  build-release:
     runs-on: ubuntu-latest
     env:
       PACKAGE_NAME: 'dev.foxscore.easy-login'
@@ -33,7 +33,7 @@ jobs:
         echo "::set-output name=is_prerelease::$([[ "${{ env.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+-(.+)$ ]] && echo true || echo false)"
 
     - name: Create Package Zip
-      run: zip -r "/tmp/${{ env.zipFile }}"
+      run: zip -r "/tmp/${{ env.zipFile }}" .
       
     - name: Track Package Meta Files
       run: find "./" -name \*.meta >> /tmp/metaList
