Added missing permissions

--- a/.github/workflows/build-on-release.yaml
+++ b/.github/workflows/build-on-release.yaml
@@ -7,6 +7,8 @@ jobs:
 
   build-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       PACKAGE_NAME: 'dev.foxscore.easy-login'
     steps:
