--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/foxscore/easy-login.git"
+    "url": "git+https://github.com/foxscore/easy-login.git"
   },
   "vpmDependencies": {
     "com.vrchat.base": "^3.5.0"
