Ready for full release
~ Fixed a bug where you couldn't log in with your username if it had a space in it
~ Updated lock icon to be the open-source version in stead of the pro one
+ Added the license for the icons
~ Fixed a bug where we try to use BestHTTP before it was ready
+ Now ordering accounts by display-name instead of when they were added

--- a/.github/workflows/build-on-release.yaml
+++ b/.github/workflows/build-on-release.yaml
@@ -35,7 +35,7 @@ jobs:
         echo "::set-output name=is_prerelease::$([[ "${{ env.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+-(.+)$ ]] && echo true || echo false)"
 
     - name: Create Package Zip
-      run: zip -r "/tmp/${{ env.zipFile }}" .
+      run: zip -x '.git/*' '.github/*' -r "/tmp/${{ env.zipFile }}" .
 
     - name: Create UnityPackage
       uses: foxscore/make-unitypackage@cbd3def23d6c9910b56e726b193c2363e5ca6adc
