--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev.foxscore.easy-login",
   "displayName": "Easy Login",
-  "version": "1.0.4-beta.1",
+  "version": "1.0.4",
   "description": "Allows you to be logged in across multiple projects with multiple accounts.",
   "unity": "2022.3",
   "license": "GPL-3.0-or-later",
